# Shannon

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SETUP_MACOS.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: heartbeat.py
shannon/: __init__.py  agent.py  api.py  llm.py  openclaw.py  qam.py  server.py  store.py  tools.py  zeckendorf.py
tests/: test_agent.py  test_llm.py  test_openclaw.py  test_qam.py  test_store.py  test_zeckendorf.py
