[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shannon"
version = "0.1.0"
description = "Persistent long-term memory for AI agents. Zero context loss. Infinite growth."
authors = [
  { name = "Ron Peterson & Guy Shannon" }
]
requires-python = ">=3.11"
dependencies = [
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = ["pytest"]
