[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon"
version = "0.1.0"
description = "Persistent long-term memory for AI agents. Zero context loss. Infinite growth."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Ron Peterson & Guy Shannon" }
]
requires-python = ">=3.11"
dependencies = [
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/SAMLLC-PROD/Shannon"
Repository = "https://github.com/SAMLLC-PROD/Shannon"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shannon*"]
